[package]
name = "zentra-sp"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.17", features = ["full"] }
anyhow = "1.0.98"
axum = "0.8.4"
reqwest = "0.12.22"
serde = "1.0.219"
serde_json = "1.0.140"
shuttle-axum = "0.56.0"
shuttle-runtime = "0.56.0"
tokio = {version = "1.46.1", features=["full"]}
